--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "https://adventofcode.com/"
 authors = ["Simon Keith <simon.keith@shippeo.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
