--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,8 @@ snakeviz = "^2.1.1"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+skeleton = 'adventofcode.tools.scripts:skeleton'
+solve = 'adventofcode.tools.scripts:solve'
+timeit = 'adventofcode.tools.scripts:timeit'
