--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,19 +6,23 @@ authors = ["Simon Keith <simon.keith@shippeo.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.12"
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.10.0"
-pytest = "^7.2.0"
-isort = "^5.10.1"
-flake8 = "^6.0.0"
-mypy = "^0.991"
-flake8-bugbear = "^22.10.27"
-flake8-builtins = "^2.0.1"
-pep8-naming = "^0.13.2"
-ipython = "^8.7.0"
-ipykernel = "^6.17.1"
+black = "^23.3.0"
+pytest = "^7.3.1"
+isort = "^5.12.0"
+flake8 = "^6.1.0"
+mypy = "^1.5.1"
+pytest-cov = "^4.0.0"
+coverage = "^7.2.3"
+flake8-bugbear = "^23.3.23"
+flake8-builtins = "^2.1.0"
+pep8-naming = "^0.13.3"
+darglint = "^1.8.1"
+flake8-docstrings = "^1.7.0"
+ipython = "^8.12.0"
+ipykernel = "^6.22.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -38,3 +42,10 @@ line-length = 88
 
 [tool.mypy]
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+addopts = "--cov=adventofcode"
+testpaths = ["tests"]
+
+[tool.coverage.report]
+skip_empty = true
