--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,13 @@
 [flake8]
 max-line-length = 88
 max-complexity = 8
+ignore = 
+extend-ignore = D100, D104
+# D104: Missing docstring in public package
+# D100 Missing docstring in public module
+per-file-ignores = 
+    adventofcode/*:D103
+    tests/*:D103
+classmethod-decorators = classmethod
+# for darglint
+docstring_style = numpy
