--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ extend-ignore = D100, D104
 # D104: Missing docstring in public package
 # D100 Missing docstring in public module
 per-file-ignores = 
-    adventofcode/*:D103
+    adventofcode/*:1003,D101,D103
     tests/*:D103
 classmethod-decorators = classmethod
 # for darglint
