--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,5 @@
 max-line-length = 88
 max-complexity = 8
 ignore = 
-extend-ignore = D100, D104
-# D104: Missing docstring in public package
-# D100 Missing docstring in public module
+extend-ignore = A003
 per-file-ignores = 
-    adventofcode/*:1003,D101,D103
-    tests/*:D103
-classmethod-decorators = classmethod
-# for darglint
-docstring_style = numpy
